src/remaster/parsers/ReactionGrammar.g4
/*
 * Copyright (c) 2023 Tim Vaughan
 *
 * This file is part of remaster.
 *
 * remaster is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * remaster is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with remaster. If not, see <https://www.gnu.org/licenses/>.
 */

grammar ReactionGrammar;

// Reaction string parser rules:

reaction : reactants '->' products EOF;
reactants : popsum ;
products : popsum ;
popsum : popel ('+' popel)* | '0' ;
popel : factor? popname loc? (':' id)?;
factor : NZINT ;
id: '0' | NZINT | IDENT;

// Reactant element list

singlepopel : popname loc?;
reactlist : singlepopel (',' singlepopel)* EOF ;

// Misc parser rules:

popname : IDENT ;
loc : '[' locidx ']' ;
locidx : '0' | NZINT | IDENT ;

// Lexer rules:

ZERO : '0' ;
NZINT : NZD D* ;
NNFLOAT : ('0' | NZINT) ('.' D*) ([eE] '-'? D+)? ;
fragment D : [0-9] ;
fragment NZD : [1-9] ;

IDENT : [a-zA-Z_][a-zA-Z_0-9]* ;

COMMENT_SINGLELINE: '//' .*? '\n' -> skip ;
COMMENT_MULTILINE: '/*' .*? '*/' -> skip ;

WHITESPACE : [ \t\r\n]+ -> skip ;
